--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="wrapper">
     <div class="part1">
-      <div class="header">
+      <div class="header" id="header-site">
         <div class="header-left">
           <h1 class="header-title">STEVEN SNELL</h1>
           <p>web &amp; graphic design protfolio</p>
