--- a/index.html
+++ b/index.html
@@ -5,169 +5,154 @@
   <title>STEVEN SNELL</title>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="part1">
-      <div class="header">
-        <div class="header-left">
-          <h1 class="header-title">STEVEN SNELL</h1>
-          <p>web &amp; graphic design protfolio</p>
+  <header>
+    <div class="logo">
+      <h1 id="title-logo"><a href="fix-index.html">STEVEN SNELL</a></h1>
+      <h3>web &amp; graphic design portfolio</h3>
+    </div>
+    <nav class="navigation">
+      <a href="#work">work</a>
+      <a href="#services">services</a>
+      <a href="#contact">contact me</a>
+    </nav>
+  </header>
+
+  <div class="main">
+    <div class="container">
+      <div class="content">
+        <h2>ABOUT ME</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      </div>
+      <div class="content">
+        <h2>LOOKING FOR A DESIGNER?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate </p>
+        <div class="content-sub">
+          <div class="content-sub-image">
+            <a href="#hire"><img src="hire.png" alt="Hire Me"></a>
+          </div>
+          <div class="content-sub-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <p><span>email: </span><a href="mailto:mymail@mydomain.com">mymail@mydomain.com</a></p>
+          </div>
         </div>
-        <div class="header-right menu">
-          <ul>
-            <li><a href="#work">work</a></li>
-            <li><a href="#services">services</a></li>
-            <li><a href="#contact">contact me</a></li>
+      </div>
+    </div>
+
+    <div class="container">
+      <h2>MY WORK</h2>
+      <div class="box">
+        <div class="content-box">
+          <div class="content-image">
+            <a href="https://google.com"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">My Corporate Website</a></h3>
+          <p>Personal project from October, 2009</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">John Doe Design portfolio</a></h3>
+          <p>Personal project from September, 2009</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">John Smith Design portfolio</a></h3>
+          <p>Personal project from August, 2009</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">Project Title</a></h3>
+          <p>Project description and date</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">Project Title</a></h3>
+          <p>Project description and date</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">Project Title</a></h3>
+          <p>Project description and date</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">Project Title</a></h3>
+          <p>Project description and date</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">Project Title</a></h3>
+          <p>Project description and date</p>
+        </div>
+        <div class="content-box">
+          <div class="content-image">
+            <a href="#"><img src="image-part2.jpg" alt="Part2"></a>
+          </div>
+          <h3 class="title-sub"><a href="#">Project Title</a></h3>
+          <p>Project description and date</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="content-portfolio">
+        <div class="title-portfolio">
+          <img src="#icon" alt="Icon Services">
+          <h2>SERVICES</h2>
+        </div>
+        <h3 class="title-sub">Web Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3 class="title-sub">Web Development</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3 class="title-sub">Graphic Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="content-portfolio">
+        <div class="title-portfolio">
+          <img src="#icon" alt="Icon Tweets">
+          <h2>TWEETS</h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+      </div>
+      <div class="content-portfolio">
+        <div class="title-portfolio">
+          <img src="#icon" alt="Icon Contact">
+          <h2>CONTACT</h2>
+        </div>
+        <p>If you’re interested in getting a quote for a project or if you just have some quetions, please <a href="mailto:joe@example.com">email me</a> with the details and I will get in touch with you as soon as possible. You can also find me on several social networking sites, my profiles are listed below.</p>
+        <p><span>Email: </span><a href="mailto:joe@example.com">mymail@mydomain.com</a></p>
+          <ul class="social-icon">
+            <li><a href="#twitter"><img src="" alt="Icon Twitter">Twitter</a></li>
+            <li><a href="#delicious"><img src="" alt="Icon Delicious">Delicious</a></li>
+            <li><a href="#flickr"><img src="" alt="Icon Flickr">Flickr</a></li>
           </ul>
-        </div>
       </div>
-      <div class="container-part1">
-        <div class="content-left">
-          <h2>ABOUT ME</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
-        <div class="content-right">
-          <h2 class="title">LOOKING FOR A DESIGNER</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-          <div class="content-right-sub">
-            <div class="content-right-sub-image">
-              <img src="hire.png" alt="Part1">
-            </div>
-            <div class="content-right-sub-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <span>email:</span>
-              <span>mymail@mydomain.com</span>
-            </div>
-          </div>
-        </div>
+      <div class="return-top">
+        <p><a href="#title-logo">Return to top</a></p>
       </div>
     </div>
-
-    <div class="part2">
-      <div class="container-part2">
-        <h2 class="title">MY WORK</h2>
-        <div class="wrapp">
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>My Corporate Website</h3>
-            <p>Personal project from October, 2009</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>John Doe Design Protfolio</h3>
-            <p>Personal project from September, 2009</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>John Smith Design Protfolio</h3>
-            <p>Personal project from October, 2009</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>Project Title</h3>
-            <p>Project description and date</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>Project Title</h3>
-            <p>Project description and date</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>Project Title</h3>
-            <p>Project description and date</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>Project Title</h3>
-            <p>Project description and date</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>Project Title</h3>
-            <p>Project description and date</p>
-          </div>
-          <div class="content-box">
-            <div class="content-image">
-              <img src="image-part2.jpg" alt="Part2">
-            </div>
-            <h3>Project Title</h3>
-            <p>Project description and date</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="part3">
-      <div class="container-part3">
-        <div class="content1">
-          <div class="title-part3">
-            <img src="" alt="Services">
-            <h2 class="title">SERVICES</h2>
-          </div>
-          <div class="content1-sub">
-            <h3>Web Design</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <h3>Web Development</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <h3>Graphic Design</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="content2">
-          <div class="title-part3">
-            <img src="" alt="Tweets">
-            <h2 class="title">TWEETS</h2>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-        </div>
-        <div class="content3">
-          <div class="title-part3">
-            <img src="" alt="Contact">
-            <h2 class="title">CONTACT</h2>
-          </div>
-          <p>If you’re interested in getting a quote for a project or if you just have some quetions, please <a href="#email">email me</a> with the details and I will get in touch with you as soon as possible. You can also find me on several social networking sites, my profiles are listed below.</p>
-          <span>Email:</span>
-          <span>mymail@mydomain.com</span>
-          <div class="link-icon">
-            <p><a href="#twitter"><img src="" alt="Twitter">Twitter</a></p>
-            <p><a href="#delicious"><img src="" alt="Delicious">Delicious</a></p>
-            <p><a href="#flickr"><img src="" alt="Flickr">Flickr</a></p>
-          </div>
-        </div>
-        <div class="return-top">
-          <p><a href="#header-site">Return to top</a></p>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <p>Copyright Steven Snell, 2009</p>
-    </footer>
   </div>
+  <footer>
+    <p>&copy; Copyright Steven Snell, 2009</p>
+  </footer>
 </body>
 </html>
