--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
   <meta charset="utf-8">
   <title>STEVEN SNELL</title>
+  <style media="screen">
+    /*.title-portfolio p{
+      float: left;
+    margin: 0;
+    padding-top: 5px;
+    padding-right: 15px;
+    }*/
+
+  </style>
 </head>
 <body>
   <header>
     <div class="logo">
       <h1 id="title-logo"><a href="fix-index.html">STEVEN SNELL</a></h1>
-      <h3>web &amp; graphic design portfolio</h3>
+      <h3><a href="fix-index.html">web &amp; graphic design portfolio</a></h3>
     </div>
     <nav class="navigation">
       <a href="#work">work</a>
@@ -30,7 +39,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate </p>
         <div class="content-sub">
           <div class="content-sub-image">
-            <a href="#hire"><img src="hire.png" alt="Hire Me"></a>
+            <p><a href="#hire"><img src="hire.png" alt="Hire Me"></a></p>
           </div>
           <div class="content-sub-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
@@ -112,7 +121,7 @@
     <div class="container">
       <div class="content-portfolio">
         <div class="title-portfolio">
-          <img src="#icon" alt="Icon Services">
+          <p><img src="#icon" alt="Icon Services"></p>
           <h2>SERVICES</h2>
         </div>
         <h3 class="title-sub">Web Design</h3>
@@ -124,7 +133,7 @@
       </div>
       <div class="content-portfolio">
         <div class="title-portfolio">
-          <img src="#icon" alt="Icon Tweets">
+          <p><img src="#icon" alt="Icon Tweets"></p>
           <h2>TWEETS</h2>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
@@ -135,7 +144,7 @@
       </div>
       <div class="content-portfolio">
         <div class="title-portfolio">
-          <img src="#icon" alt="Icon Contact">
+          <p><img src="#icon" alt="Icon Contact"></p>
           <h2>CONTACT</h2>
         </div>
         <p>If you’re interested in getting a quote for a project or if you just have some quetions, please <a href="mailto:joe@example.com">email me</a> with the details and I will get in touch with you as soon as possible. You can also find me on several social networking sites, my profiles are listed below.</p>
